solved gsap scrolltrigger not working on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,6 @@ body,
 html {
   width: 100%;
   height: 100%;
-
-  overflow-x: hidden;
 }
 
 @layer utilities {
